--- a/app/src/main/res/menu/menu_sign_up.xml
+++ b/app/src/main/res/menu/menu_sign_up.xml
@@ -3,6 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="io.github.rosariopfernandes.personalbanking.SignUpActivity">
     <item
+        android:id="@+id/action_categories"
+        android:orderInCategory="98"
+        android:title="@string/title_activity_categories"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_sources"
+        android:orderInCategory="99"
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
