feat: Sources Created Activity to display and create sources
Signed-off-by: Rosário Pereira Fernandes <rosariofernandes51@gmail.com>

--- a/app/src/main/res/menu/menu_sign_up.xml
+++ b/app/src/main/res/menu/menu_sign_up.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/action_sources"
         android:orderInCategory="99"
-        android:title="@string/action_settings"
+        android:title="@string/title_activity_sources"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_settings"
